--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "providerformfiller",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
   "main": "main.js",
   "dependencies": {
@@ -37,6 +37,7 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/archubbuck/ProviderFormFiller.git"
+    "url": "https://github.com/archubbuck/ProviderFormFiller.git",
+    "private": true
   }
 }
