--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "providerformfiller",
-  "version": "1.0.4",
+  "version": "1.0.5git",
   "description": "",
   "main": "main.js",
   "dependencies": {
