--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "providerformfiller",
-  "version": "1.0.5git",
+  "version": "1.0.6",
   "description": "",
   "main": "main.js",
   "dependencies": {
@@ -13,7 +13,8 @@
     "node-pdftk": "^2.1.2",
     "nodemailer": "^6.4.2",
     "pdf.js-extract": "^0.1.4",
-    "pdffiller-stream": "^0.2.0"
+    "pdffiller-stream": "^0.2.0",
+    "update-electron-app": "^1.5.0"
   },
   "devDependencies": {
     "electron": "^7.1.14",
@@ -28,16 +29,9 @@
   "fileAssociations": {},
   "scripts": {
     "start": "electron .",
-    "publish": "electron-packager . --platform=win32 --arch=x64 --out=..\\dist --overwrite",
-    "build": "electron-builder build --win --publish never",
-    "deploy": "electron-builder build --win --publish always"
+    "publish": "electron-packager . --platform=win32 --arch=x64 --out=..\\dist --overwrite"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/archubbuck/ProviderFormFiller.git",
-    "private": true
-  }
+  "license": "ISC"
 }
